Add more styling to section

--- a/static/css/variables_and_mixins.scss
+++ b/static/css/variables_and_mixins.scss
@@ -8,6 +8,8 @@ $main-orange: #ec9a29;
 $main-bordo: #23001e;
 $main-light-blue: #a5d8ff;
 $main-red: #de3c4b;
+$section-bg: #e4e4fb;
+$section-border: rgba(113, 147, 174, 0.2);
 
 $button-border: #7193ae71;
 
