--- a/static/css/variables_and_mixins.scss
+++ b/static/css/variables_and_mixins.scss
@@ -13,6 +13,7 @@ $section-border: rgba(113, 147, 174, 0.2);
 
 $button-border: #7193ae71;
 
+// BUTTON - PRIMARY
 $button-primary-bg:  #a5d8ff;
 $button-primary-hover-bg:  #99cef5;
 $button-primary-active-bg:  #6fbbf1;
@@ -22,6 +23,7 @@ $button-primary-border:  #586b87;
 
 $button-primary-hover-border:  #566884;
 
+// BUTTON - SECONDARY
 $button-secondary-bg:  $main-orange;
 $button-secondary-hover-bg:  #df8f20;
 $button-secondary-active-bg:  #d68719;
@@ -31,6 +33,16 @@ $button-secondary-hover-color: #341f02;// #0c0e11;
 $button-secondary-border:  #a86e1c;
 
 $button-secondary-hover-border:  #566884;
+
+// BUTTON - TERTIARY
+$button-tertiary-bg:  #d5d5e6;
+$button-tertiary-hover-bg:  #7bb7f8;
+$button-tertiary-hover-color: #edf7ff;
+$button-tertiary-active-bg:  #6fbbf1;
+$button-tertiary-color:  #0c0e11;
+$button-tertiary-border:  #586b87;
+
+$button-tertiary-hover-border:  #566884;
 
 @mixin desktop {
   @media (min-width: #{$breakpoint-desktop}) {
